[package]
name = "brave-admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6"
toml = "0.5"
serde = {version = "1.0", features = ["derive"] }
futures-util = { version = "0.3.7", default-features = false, features = ["std"] }
md5 = "0.7.0"
simplelog = "0.11"
log = "0.4"
rbson = "2.0"
rbatis = { version = "3.1", default-features = false, features = ["mysql", "runtime-actix-native-tls"] }