[package]
name = "brave-admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6"
actix-multipart = "0.4"
actix-files = "0.6.0"
toml = "0.5"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = { version = "0.3.7", default-features = false, features = ["std"] }
md5 = "0.7.0"
fern = "0.6.0"
log = "0.4"
chrono = "0.4"
rbson = "2.0"
rbatis = { version = "3.1", default-features = false, features = ["mysql", "runtime-actix-native-tls"] }
[dependencies.uuid]
version = "1.0.0-alpha.1"
features = ["v4"]